--- a/index.html
+++ b/index.html
@@ -422,6 +422,265 @@
       animation-delay: 4s;
     }
 
+    /* Software Section Styles */
+  .software-section {
+    padding: 0px 40px 80px;
+    position: relative;
+    z-index: 1;
+    min-height: 100vh;
+  }
+
+  .software-container {
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+
+  .section-title {
+    font-size: 48px;
+    font-weight: 700;
+    text-align: center;
+    background:#fff;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 0 0 30px rgba(83, 46, 145, 0.6);
+  }
+
+  .section-subtitle {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 20px;
+    color: rgba(255, 255, 255, 0.85);
+  }
+
+  .software-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding: 20px 0;
+  }
+
+  .software-card {
+    background: linear-gradient(145deg, rgba(255, 255, 255, 0.12), rgba(255, 255, 255, 0.05));
+    border: 1.5px solid rgba(255, 255, 255, 0.18);
+    border-radius: 20px;
+    overflow: hidden;
+    backdrop-filter: blur(25px);
+    transition: all 0.4s ease;
+    box-shadow: 
+      0 15px 40px rgba(0, 0, 0, 0.15),
+      0 8px 20px rgba(83, 46, 145, 0.25),
+      inset 0 1px 0 rgba(255, 255, 255, 0.15);
+  }
+
+  .software-card:hover {
+    transform: translateY(-8px);
+    border-color: rgba(139, 92, 246, 0.4);
+    box-shadow: 
+      0 25px 60px rgba(0, 0, 0, 0.2),
+      0 12px 30px rgba(83, 46, 145, 0.4),
+      inset 0 1px 0 rgba(255, 255, 255, 0.2);
+  }
+
+  .card-image {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+    position: relative;
+    background: linear-gradient(135deg, #3A2BBD, #532E91);
+  }
+
+  .card-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.5s ease;
+  }
+
+ 
+
+  .card-content {
+    padding: 24px;
+  }
+
+  .card-content h3 {
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 12px;
+    color: white;
+    text-shadow: 0 0 20px rgba(83, 46, 145, 0.4);
+  }
+
+  .card-content p {
+    font-size: 14px;
+    line-height: 1.6;
+    color: rgba(255, 255, 255, 0.8);
+    margin-bottom: 16px;
+    min-height: 60px;
+  }
+
+  .card-features {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin-bottom: 20px;
+  }
+
+  .feature-tag {
+    display: inline-block;
+    padding: 6px 14px;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05));
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 18px;
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.9);
+    backdrop-filter: blur(10px);
+    font-weight: 500;
+  }
+
+  .btn-kinun {
+    display: block;
+    width: 100%;
+    padding: 14px 0;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.08));
+    border: 2px solid rgba(255, 255, 255, 0.25);
+    border-radius: 50px;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    position: relative;
+    overflow: hidden;
+    backdrop-filter: blur(15px);
+    box-shadow: 
+      0 6px 20px rgba(83, 46, 145, 0.2),
+      inset 0 1px 0 rgba(255, 255, 255, 0.2),
+      inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  }
+
+  .btn-text {
+    position: relative;
+    z-index: 2;
+  }
+
+  .btn-shine {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, 
+      transparent, 
+      rgba(255, 255, 255, 0.3), 
+      transparent);
+    transition: left 0.6s ease;
+    z-index: 1;
+  }
+
+  .btn-kinun::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, #3A2BBD, #532E91, #6B46C1);
+    opacity: 0;
+    transition: opacity 0.4s ease;
+    z-index: 0;
+  }
+
+  .btn-kinun:hover {
+    border-color: rgba(255, 255, 255, 0.4);
+    transform: translateY(-3px);
+    box-shadow: 
+      0 10px 30px rgba(83, 46, 145, 0.4),
+      inset 0 2px 0 rgba(255, 255, 255, 0.3),
+      inset 0 -2px 0 rgba(0, 0, 0, 0.15);
+  }
+
+  .btn-kinun:hover::before {
+    opacity: 1;
+  }
+
+  .btn-kinun:hover .btn-shine {
+    left: 100%;
+  }
+
+  .btn-kinun:active {
+    transform: translateY(-1px);
+  }
+
+  /* Responsive Design for Software Section */
+  @media (max-width: 1024px) {
+    .software-grid {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 25px;
+    }
+
+    .section-title {
+      font-size: 38px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .software-section {
+      padding: 100px 20px 60px;
+    }
+
+    .software-grid {
+      grid-template-columns: 1fr;
+      gap: 20px;
+    }
+
+    .section-title {
+      font-size: 32px;
+    }
+
+    .section-subtitle {
+      font-size: 16px;
+      margin-bottom: 40px;
+    }
+
+    .card-image {
+      height: 180px;
+    }
+
+    .card-content {
+      padding: 20px;
+    }
+
+    .card-content h3 {
+      font-size: 20px;
+    }
+
+    .card-content p {
+      font-size: 13px;
+      min-height: auto;
+    }
+
+    .btn-kinun {
+      font-size: 15px;
+      padding: 12px 0;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .section-title {
+      font-size: 26px;
+    }
+
+    .section-subtitle {
+      font-size: 14px;
+    }
+
+    .feature-tag {
+      font-size: 11px;
+      padding: 5px 12px;
+    }
+  }
+
     /* Advanced Animations */
     @keyframes typeWriter {
       from { 
@@ -704,5 +963,113 @@
       </div>
     </div>
   </section>
+ <!-- Software Section - Add this after the main-content section -->
+<section id="software" class="software-section">
+  <div class="software-container">
+    <h2 class="section-title">আমাদের সফটওয়্যার সমূহ</h2>
+    <p class="section-subtitle">আধুনিক ও কার্যকর সফটওয়্যার সমাধান যা আপনার ব্যবসায়িক চাহিদা পূরণ করবে</p>
+    
+    <div class="software-grid">
+      <!-- POS System -->
+      <div class="software-card">
+        <div class="card-image">
+          <img src="pos.png" alt="POS System">
+        </div>
+        <div class="card-content">
+          <h3>POS সিস্টেম</h3>
+          <p>রেস্টুরেন্ট ও রিটেইল ব্যবসার জন্য সম্পূর্ণ পয়েন্ট অফ সেল সমাধান</p>
+          <div class="card-features">
+            <span class="feature-tag">বিলিং</span>
+            <span class="feature-tag">ইনভেন্টরি</span>
+            <span class="feature-tag">রিপোর্ট</span>
+          </div>
+          <a href="#" class="btn-kinun">
+            <span class="btn-text">কিনুন</span>
+            <span class="btn-shine"></span>
+          </a>
+        </div>
+      </div>
+
+      <!-- Inventory Mini -->
+      <div class="software-card">
+        <div class="card-image">
+          <img src="inventory-management-software.png" alt="Inventory Mini">
+        </div>
+        <div class="card-content">
+          <h3>ইনভেন্টরি মিনি</h3>
+          <p>ছোট ব্যবসার জন্য সহজ ও কার্যকর স্টক ম্যানেজমেন্ট সিস্টেম</p>
+          <div class="card-features">
+            <span class="feature-tag">স্টক</span>
+            <span class="feature-tag">সেলস</span>
+          </div>
+          <a href="#" class="btn-kinun">
+            <span class="btn-text">কিনুন</span>
+            <span class="btn-shine"></span>
+          </a>
+        </div>
+      </div>
+
+      <!-- Inventory Big -->
+      <div class="software-card">
+        <div class="card-image">
+          <img src="inventory-software-device.png" alt="Inventory Big">
+        </div>
+        <div class="card-content">
+          <h3>ইনভেন্টরি বিগ</h3>
+          <p>বড় আকারের ব্যবসার জন্য উন্নত ইনভেন্টরি ম্যানেজমেন্ট সফটওয়্যার</p>
+          <div class="card-features">
+            <span class="feature-tag">মাল্টি-ব্রাঞ্চ</span>
+            <span class="feature-tag">অটোমেশন</span>
+          </div>
+          <a href="#" class="btn-kinun">
+            <span class="btn-text">কিনুন</span>
+            <span class="btn-shine"></span>
+          </a>
+        </div>
+      </div>
+
+      <!-- E-Commerce -->
+      <div class="software-card">
+        <div class="card-image">
+          <img src="ecommerce.png" alt="E-Commerce">
+        </div>
+        <div class="card-content">
+          <h3>ই-কমার্স</h3>
+          <p>সম্পূর্ণ অনলাইন শপিং সলিউশন পেমেন্ট গেটওয়ে সহ</p>
+          <div class="card-features">
+            <span class="feature-tag">স্টোর</span>
+            <span class="feature-tag">পেমেন্ট</span>
+          </div>
+          <a href="#" class="btn-kinun">
+            <span class="btn-text">কিনুন</span>
+            <span class="btn-shine"></span>
+          </a>
+        </div>
+      </div>
+
+      <!-- School Management -->
+      
+
+      <!-- Portfolio -->
+      <div class="software-card">
+        <div class="card-image">
+          <img src="portfolio.png" alt="Portfolio">
+        </div>
+        <div class="card-content">
+          <h3>পোর্টফোলিও</h3>
+          <p>আকর্ষণীয় ও প্রফেশনাল পার্সোনাল পোর্টফোলিও সাইট</p>
+          <div class="card-features">
+            <span class="feature-tag">রেসপন্সিভ</span>
+            <span class="feature-tag">এসইও</span>
+          </div>
+          <a href="#" class="btn-kinun">
+            <span class="btn-text">কিনুন</span>
+            <span class="btn-shine"></span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 </body>
 </html>
